--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Esse é o meu pimeiro site!">
+    <meta name="description" content="Esse é o meu site !">
     <meta name="keywords" content="Programação html,css,javascript">
     <meta name="author" content="Caique Galvão">
     <title>Portfólio </title>
